# genesis2.4gamma

./: .gitignore  .travis.yml  README.bindist  README.md  TODO
.test/: test_rng.g  version.g
src/: Makefile.BASE  Makefile.dist  Makefile.in  Makefile.minimal  README.md  README.old  config.status  configure  configure.ac
src/diskio/interface/netcdf/netcdf-3.4/src/: config.status  macros.make
src/par/: Makefile
src/sim/: sim_base.c
src/startup/: travis_simrc
